# SecureWebSocketClient-Cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cli/: cli.cpp  cli.h
src/websocket/: tls_context.cpp  tls_context.h  websocket_client.cpp  websocket_client.h
tests/: websocket_client_test.cpp
